crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@type_casts___casting_between_felt_and_u32.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Type Casts - Casting between Felt and U32"
input_file: mdtest/01-basics/08-type-casts.md
---
Source:
fn test_u32_to_felt(input: u32) -> felt {
    let y: felt = input as felt;
    return y;
}
============================================================
Generated CASM:
test_u32_to_felt:
test_u32_to_felt:
test_u32_to_felt_0:
   0: 48 -4 32767 1        // [fp + 1] = [fp + -4] < 32767 // hi < 2^15 - 1
   1: 48 -4 32768 2        // [fp + 2] = [fp + -4] < 32768 // hi < 2^15
   2: 1 2 1 3              // [fp + 3] = [fp + 2] - [fp + 1] // hi == 32767
   3: 14 3 3 _             // if [fp + 3] != 0, jump to u32_cast_check_low_0
   4: 50 1 1 _             // assert(hi < 2^15 - 1)
   5: 12 8 _ _             // jump to u32_cast_ok_1
u32_cast_check_low_0:
   6: 48 -5 65535 4        // [fp + 4] = [fp + -5] < 65535 // lo != 2^16 - 1
   7: 50 4 1 _             // assert(lo != 2^16 - 1)
u32_cast_ok_1:
   8: 6 -4 65536 5         // [fp + 5] = [fp + -4] * 65536 // hi * 2^16
   9: 0 -5 5 0             // [fp + 0] = [fp + -5] + [fp + 5] // Cast u32->felt
  10: 4 0 0 -3             // Return value 0: [fp -3] = [fp + 0] + 0
  11: 11 _ _ _             // return
