crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@type_casts___casting_from_u32_to_felt_2.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Type Casts - Casting from u32 to felt 2"
input_file: mdtest/01-basics/08-type-casts.md
---
Source:
fn test_felt_to_u32() -> u32 {
    let x: felt = 10;
    let y: u32 = x as u32;
    return y;
}
============================================================
Result: EXPECTED ERROR
Semantic validation failed with diagnostics:
[2001] Error: Invalid cast from 'felt' to 'u32'. Only u32 to felt casting is currently supported.
   ╭─[ Type Casts - Casting from u32 to felt 2:3:18 ]
   │
 3 │     let y: u32 = x as u32;
   │                  ┬  
   │                  ╰── Invalid cast from 'felt' to 'u32'. Only u32 to felt casting is currently supported.
───╯
